Resolve some potential bugs